--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@types/file-saver": "^2.0.5",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
     "ngx-page-scroll-core": "^10.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
