fixed horizontal scroll

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/file-saver": "^2.0.5",
     "bootstrap": "^5.2.3",
     "file-saver": "^2.0.5",
+    "mdb-ui-kit": "^6.1.0",
     "ngx-page-scroll-core": "^10.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
